--- a/app/src/main/res/layout/activity_invoice_class.xml
+++ b/app/src/main/res/layout/activity_invoice_class.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,7 +9,8 @@
 
 
     <ListView
-        android:layout_width="match_parent"
+        android:id="@+id/lv_nvc"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,9 +35,10 @@
 
 
             <ImageView
+                android:id="@+id/img_invc_cls"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
+                android:layout_weight="0.3"
                 android:src="@drawable/ic_close_black"
                 />
 
@@ -47,12 +50,13 @@
 
 
             <TextView
+                android:id="@+id/tv_invc_typ"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="2"
                 android:text="فاکتور فروش"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
 
         </LinearLayout>
@@ -66,12 +70,13 @@
 
 
             <TextView
+                android:id="@+id/tv_invc_date"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:gravity="left|center"
                 android:text="تاریخ: 98/09/19 "
-                android:textSize="20sp"
+                android:textSize="15sp"
 
                 />
 
@@ -84,13 +89,14 @@
 
 
             <TextView
+                android:id="@+id/tv_invc_no"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="3"
                 android:gravity="right|center"
                 android:text="شماره فاکتور :"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
 
         </LinearLayout>
@@ -103,16 +109,19 @@
             android:background="@color/colorPrimary">
 
             <ImageView
+                android:id="@+id/img_add_cstmr"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
+                android:layout_weight="0.3"
                 android:src="@drawable/ic_person_add_black" />
 
 
             <EditText
+                android:id="@+id/ed_set_cstmr"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:textSize="15dp"
                 android:hint="جستجو" />
 
 
@@ -120,10 +129,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
-                android:layout_weight="01"
+                android:layout_weight="0.75"
                 android:gravity="right|center"
                 android:text="طرف حساب:"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
 
         </LinearLayout>
@@ -142,39 +151,47 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="end"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/btn_add_prdct"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="افزودن کالا" />
 
             <Button
+                android:id="@+id/btn_nvc_dsc"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="شرح فاکتور" />
 
             <Button
+                android:id="@+id/btn_nvc_ok"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="ثبت فاکتور" />
+                android:text="ثبت فاکتور"
+                android:textColor="@color/colorAccent"/>
 
             <Button
+                android:id="@+id/btn_nvc_dcnt"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="تخفیف" />
 
             <Button
+                android:id="@+id/btn_nvc_addition"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="اضافات" />
 
             <Button
+                android:id="@+id/btn_nvc_ddct"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
