--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
 
             <Button
-                android:id="@+id/btn_1"
+                android:id="@+id/btn_income"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -34,14 +34,14 @@
                 android:padding="0dp"/>
 
             <Button
-                android:id="@+id/btn_2"
+                android:id="@+id/btn_receive"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/receive" />
 
             <Button
-                android:id="@+id/btn_3"
+                android:id="@+id/btn_sell"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -100,21 +100,21 @@
 
 
             <Button
-                android:id="@+id/btn_4"
+                android:id="@+id/btn_cost"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/cost" />
 
             <Button
-                android:id="@+id/btn_5"
+                android:id="@+id/btn_pay"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/pay" />
 
             <Button
-                android:id="@+id/btn_6"
+                android:id="@+id/btn_buy"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -173,7 +173,7 @@
 
 
             <Button
-                android:id="@+id/btn_7"
+                android:id="@+id/btn_installment"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -182,7 +182,7 @@
 
 
             <Button
-                android:id="@+id/btn_8"
+                android:id="@+id/btn_checks"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -247,7 +247,7 @@
             app:layout_constraintVertical_weight="2">
 
             <Button
-                android:id="@+id/btn_9"
+                android:id="@+id/btn_bnk_acnt"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -257,7 +257,7 @@
 
 
             <Button
-                android:id="@+id/btn_10"
+                android:id="@+id/btn_customer"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -307,7 +307,7 @@
             app:layout_constraintVertical_weight="2">
 
             <Button
-                android:id="@+id/btn_11"
+                android:id="@+id/btn_edit"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -317,7 +317,7 @@
 
 
             <Button
-                android:id="@+id/btn_12"
+                android:id="@+id/btn_wrhus_prdct"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -367,7 +367,7 @@
             app:layout_constraintVertical_weight="2">
 
             <Button
-                android:id="@+id/btn_13"
+                android:id="@+id/btn_report"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
